--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "echo start"
+    "start": "nodemon src/server.js"
   },
   "author": "Sanskar Bhusal",
   "dependencies": {
