--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,9 +1,21 @@
-# Database
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+ENVIRONMENT=local
+
+# Production Database: Postgres 17
+#
+# I'll be using third party postgres deployment 
+# in production to preserve RAM on my Azure VM.
+DB_HOST_PRODUCTION=
+DB_PORT_PRODUCTION=
+DB_USER_PRODUCTION=
+DB_PASSWORD_PRODUCTION=
+DB_NAME_PRODUCTION=
+
+# Local Database: Postgres 16.11
+DB_HOST_LOCAL=
+DB_PORT_LOCAL=
+DB_USER_LOCAL=
+DB_PASSWORD_LOCAL=
+DB_NAME_LOCAL=
 
 # Express server
 PORT=
