--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "deploy": "npm run build && cp dist/index.html dist/404.html && npx gh-pages -d dist -c clarity.sanskarbhusal.com.np",
+    "deploy": "npm run build && cp dist/index.html dist/404.html && echo 'clarity.sanskarbhusal.com.np' > dist/CNAME && npx gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
