--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "deploy": "npm run build && cp dist/index.html dist/404.html && echo 'clarity.sanskarbhusal.com.np' > dist/CNAME && npx gh-pages -d dist",
     "lint": "eslint .",
